data/derived/comb/progs/unify/prog6998.ml.out
Characters 178-179:
  in wwhile(gs, b);;
                ^
Error: This expression has type (int -> int) * bool
       but an expression was expected of type int -> int
